--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 			<p>IQ-UP</p>
 			<p>少しIQが上がったり下がったりするブログ
 			それがRobotのブログ(自慢する事じゃない)</p>
+			<p>このwebページは、テストです:)</p>
 		</div>
 		<figure class="img">
 			
